# api-shadow-villen

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  shadow-mapper.example.yaml
.github/workflows/: ci.yml  scan.yml
results/: report.json
src/shadow_mapper/: __init__.py  cli.py
src/shadow_mapper/auditor/: __init__.py  diff.py  generator.py  sarif.py
src/shadow_mapper/core/: __init__.py  bulk.py  checkpoint.py  config.py  diff.py  exceptions.py  logging.py  models.py  orchestrator.py  safety.py
src/shadow_mapper/harvester/: __init__.py  archive.py  browser.py  orchestrator.py  subdomain.py
src/shadow_mapper/parser/: __init__.py  engine.py  graphql.py  resolver.py  secrets.py
src/shadow_mapper/parser/queries/: javascript.scm  python.scm
src/shadow_mapper/prober/: __init__.py  fuzzer.py  heuristics.py  nuclei.py  scanner.py
src/shadow_mapper/reports/: dashboard.py  html.py
tesla-results/events.tesla.com/: report.json
tesla-results/share.tesla.com/: report.json
tesla-results/shop.tesla.com/: report.json
tests/: conftest.py  test_auditor.py  test_checkpoint.py  test_exceptions.py  test_harvester.py  test_parser.py  test_prober.py  test_safety.py
